# nanobind_json

./: .gitignore  CMakeLists.txt  LICENSE  README.md  nanobind_jsonConfig.cmake.in
.github/workflows/: testing.yml
include/nanobind_json/: nanobind_json.h  nanobind_json.hpp
test/: CMakeLists.txt  test_json.cpp  test_nanobind_json.cpp
tests/: CMakeLists.txt  test_json.cpp  test_json.py
tests/test_json_ext/: __init__.py
